# RacingGame

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  premake5.lua
src/: App.cpp  App.h  game.cpp  game.h  main.cpp
src/core/: Scene.h  core.h
src/core/utils/: Log.h
src/editor/: EditorScene.cpp  EditorScene.h  editor_scene.cpp  editor_scene.h
src/game/: GameScene.cpp  GameScene.h  game_scene.cpp  game_scene.h
